apps/production/arize-phoenix/phoenix-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phoenix
spec:
  ports:
    - name: http
      port: 6006
      targetPort: 6006
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: metrics
      port: 9090
      targetPort: 9090
  selector:
    app: phoenix
  type: ClusterIP
